--- a/benchmark/src/main/webapp/benchmark_chart.html
+++ b/benchmark/src/main/webapp/benchmark_chart.html
@@ -7,10 +7,10 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-sanitize.js"></script>
+        <script src=""></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.7/angular-sanitize.js"></script>
         <script src="https://www.google.com/jsapi"></script>
-
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <script src="js/jquery.csv-0.71.min.js"></script> <!-- CSV parser -->
         <script src="js/purl.js"></script> <!-- URL parser -->
         <script src="js/benchmark-app.js"></script>
@@ -18,8 +18,8 @@
     <body>
         <div class="container" ng-controller="BenchmarkController">
             <div class="jumbotron">
-                <h1>NM Dev is so fast!</h1>      
-                <p>This page shows the benchmark results for NM Dev (compared with other free libraries).</p>
+                <h1>SuanShu is so fast!</h1>      
+                <p>This page shows the benchmark results for SuanShu (compared with other free libraries).</p>
                 <div class="well-sm">
                     <span class="glyphicon glyphicon-bell"></span> The source code of this benchmark program is available 
                     <a href="http://redmine.numericalmethod.com/projects/public/repository/show/benchmark" target="_blank">here</a>.
@@ -56,4 +56,3 @@
         </div>
     </body>
 </html>
-
